# ai-agents-news-aggregator

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Makefile  README.md  conftest.py  main.py  mypy.ini  plan.md  pyproject.toml  rss_feeds.md  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  lambda-deploy.yml  scraper-deploy.yml  web-ci.yml  web-deploy.yml
config/: loader.py  settings.py  user_profile.yml
docs/: architecture.md  ecs-express-bootstrap.md
docs/runbooks/: api-5xx-spike.md  cron-pipeline-failure.md  scraper-degraded.md
infra/: README.md  setup-iam.sh
infra/alerts/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/api/: alarms.tf  apigateway.tf  backend.tf  data.tf  github_oidc.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/bootstrap/: .gitignore  main.tf  outputs.tf  variables.tf
infra/digest/: alarms.tf  backend.tf  github_oidc.tf  main.tf  outputs.tf  variables.tf
infra/editor/: alarms.tf  data.tf  github_oidc.tf  main.tf  terraform.tfvars.example  variables.tf
infra/email/: alarms.tf  data.tf  github_oidc.tf  main.tf  variables.tf
infra/scheduler/: alarms.tf  eventbridge.tf  github_oidc.tf  main.tf  outputs.tf  state_machines.tf  terraform.tfvars.example  variables.tf
infra/scraper/: backend.tf  cluster.tf  data.tf  dns.tf  ecr.tf  github_oidc.tf  iam.tf  outputs.tf  service.sh  service.tf  ssm.tf  sync_secrets.py  terraform.tfvars.example  variables.tf
infra/web/: backend.tf  cloudfront.tf  data.tf  github_oidc.tf  main.tf  outputs.tf  route53.tf  terraform.tfvars.example  variables.tf
models/: youtube.py
rss_parser_pipeline/: schema.sql
scrapers/: base.py
scripts/: api-smoke.sh  lambda-deploy.sh  reset_db.py  scraper-deploy.sh  seed_user.py  web-deploy.sh
services/agents/editor/: deploy.py  lambda_handler.py  package_docker.py  pyproject.toml
services/agents/editor/src/news_editor/: __init__.py  __main__.py  agent.py  cli.py  pipeline.py  prompts.py  settings.py
services/agents/editor/src/news_editor/tests/unit/: test_agent.py  test_cli.py  test_lambda_handler.py  test_pipeline.py  test_prompts.py  test_settings.py
services/agents/email/: deploy.py  lambda_handler.py  package_docker.py  pyproject.toml
services/agents/email/src/news_email/: __init__.py  __main__.py  agent.py  cli.py  pipeline.py  render.py  resend_client.py  settings.py
services/agents/email/src/news_email/templates/: digest.html.j2
services/agents/email/src/news_email/tests/unit/: test_agent.py  test_cli.py  test_lambda_handler.py  test_pipeline.py  test_render.py  test_resend_client.py  test_settings.py
services/api/: deploy.py  lambda_handler.py  package_docker.py  pyproject.toml
services/api/src/news_api/: __main__.py  app.py  cli.py  deps.py  settings.py
services/api/src/news_api/auth/: jwks.py  verify.py
services/api/src/news_api/clients/: stepfunctions.py
services/api/src/news_api/routes/: digests.py  healthz.py  me.py  remix.py
services/api/src/news_api/tests/integration/: conftest.py  test_digests.py  test_healthz.py  test_jwt_regression.py  test_me.py  test_profile.py  test_remix.py
services/api/src/news_api/tests/unit/: test_jwks.py  test_settings.py  test_stepfunctions.py  test_verify.py
services/scheduler/: deploy.py  lambda_handler.py  package_docker.py  pyproject.toml
services/scheduler/src/news_scheduler/: __init__.py  __main__.py  cli.py  settings.py
services/scheduler/src/news_scheduler/handlers/: list_active_users.py  list_new_digests.py  list_unsummarised.py
services/scheduler/src/news_scheduler/tests/unit/: test_cli.py  test_lambda_handler.py  test_list_active_users.py  test_list_new_digests.py  test_list_unsummarised.py  test_settings.py
services/scraper/: .dockerignore  Dockerfile  deploy.py  pyproject.toml
services/scraper/_legacy/models/: youtube.py
services/scraper/_legacy/rss_parser_pipeline/: rss_parser_agent.py  rss_pipeline.py
services/scraper/_legacy/scrapers/: base.py
services/scraper/_legacy/youtube_rss_pipeline/: youtube-transcriptapi.md  youtube_rss.py
services/scraper/src/news_scraper/: __init__.py  cli.py  main.py  mcp_servers.py  orchestrator.py  settings.py  stats.py
services/scraper/src/news_scraper/api/: dependencies.py  routes.py
services/scraper/src/news_scraper/pipelines/: adapters.py  base.py  rss.py  rss_adapters.py  web_search.py  web_search_adapters.py  youtube.py  youtube_adapters.py
services/scraper/src/news_scraper/tests/live/: test_rss_mcp_live.py  test_youtube_live.py
services/scraper/src/news_scraper/tests/unit/: test_cli.py  test_deploy.py  test_mcp_servers.py  test_orchestrator.py  test_pipelines_rss.py  test_pipelines_web_search.py  test_pipelines_youtube.py  test_rss_adapters.py  test_settings.py  test_stats.py  test_sync_secrets.py  test_web_search_adapters.py  test_youtube_adapters.py
tests/integration/: conftest.py  test_alembic_migrations.py  test_article_repo.py  test_article_repo_summary.py  test_article_repo_summary_queries.py  test_audit_log_repo.py  test_digest_repo.py  test_digest_repo_pagination.py  test_digest_repo_today.py  test_email_send_repo.py  test_email_send_repo_idempotency.py  test_reset_db_guard.py  test_scheduler_asl.py  test_scraper_api.py  test_scraper_run_repo.py  test_scraper_runs_migration.py  test_user_repo.py  test_user_repo_active_users.py
utils/: logging.py
web/: .env.example  .npmrc  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
web/lib/: api.ts  (+4 more)
youtube_rss_pipeline/: youtube-transcriptapi.md  youtube_rss.py
(+94 files in other folders)
