[project]
name = "ai-agent-news-aggregator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "loguru>=0.7.3",
    "openai-agents>=0.14.5",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "supabase>=2.28.3",
    "youtube-transcript-api>=1.2.4",
]
