[project]
name = "news_editor"
version = "0.1.0"
requires-python = ">=3.12"
description = "Editor agent — per-user article ranking Lambda"
dependencies = [
    "openai-agents>=0.14.5",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.5",
    "loguru>=0.7.3",
    "typer>=0.24.2",
    "boto3>=1.42.95",
    "news_schemas",
    "news_config",
    "news_observability",
    "news_db",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_editor"]
